<resources>
    <string name="toast_crash_report">Errore in LooWebPlayer</string>
    <string name="app_name">Loo\'s WebPlayer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">looWebPlayer</string>
    <string name="nav_header_subtitle">looigi@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Impostazioni</string>
    <string name="utenza">Utenza</string>
    <string name="cambio_utenza">Cambio utenza</string>
    <string name="cartella">Cartella</string>
    <string name="utenza_attuale">Utenza connessa</string>
    <string name="nome_utente">Nome utente</string>
    <string name="password_utente">Password</string>
    <string name="equalizer">Equalizzatore</string>
    <string name="about">About</string>
    <string name="ok">Ok</string>
    <string name="enabled">Abilitato</string>
    <string name="pulizia">Pulizia Disco</string>
    <string name="pulizia_per_numero_files">Per Numero Files</string>
    <string name="pulizia_per_mega">Per Mega</string>
    <string name="pulizia_numero_files">Numero Files</string>
    <string name="pulizia_mega">Mega</string>
    <string name="flat">Flat</string>
    <string name="bass_boost">Bass Boost</string>
    <string name="annulla">Annulla</string>
    <string name="utente_non_valido">ERROR: Utente non valido</string>
    <string name="password_non_valida">ERROR: Password non valida</string>
    <string name="home">Home</string>
    <string name="libreria">Libreria</string>
    <string name="uscita">Uscita</string>
    <string name="operazioni">Operazioni</string>
    <string name="artista">Artista</string>
    <string name="album">Album</string>
    <string name="durata">Durata</string>
    <string name="scarica_dettagli">Scarica dettagli</string>
    <string name="compressione">Compressione MP3</string>
    <string name="qualita">Qualità</string>
    <string name="modalita_random">Avanzamento random</string>
    <string name="brano">brano</string>
    <string name="tipo_utente">Tipo Utente</string>
    <string name="modalita_compressione">Compressione MP3</string>
    <string name="scarica_testi">Scarica Testi</string>
    <string name="framerate">Framerate</string>
    <string name="salvataggio">Salvataggio Oggetti</string>
    <string name="schermo_acceso">Lascia lo schermo acceso</string>
    <string name="ordinamento">Ordinamento brani</string>
    <string name="nessuno">Nessuno</string>
    <string name="data">Data</string>
    <string name="ascendente">Ascendente</string>
    <string name="alfabetico">Alfabetico</string>
    <string name="ricorda_ultimo">Ricorda ultimo brano</string>
    <string name="refresh_brani">Refresh Brani</string>
    <string name="puntini">...</string>
    <string name="testo_in_inglese">Testo in lingua originale</string>
    <string name="log">Log</string>
    <string name="segnale">Segnale</string>
    <string name="normale">Normale</string>
    <string name="irregolare">Irregolare</string>
    <string name="assente">Assente</string>
    <string name="presente">Presente</string>
    <string name="timeout_dl">Timeout DL</string>
    <string name="timeout_dl_mp3">Timeout DL MP3</string>
    <string name="attesa_dl_mp3">Attesa DL MP3</string>
    <string name="timeout_dl_imm">Attesa DL Imm.</string>
    <string name="timeout_dl_lb">T.o. DL L.Brani</string>
    <string name="debug">Debug</string>
    <string name="crea_log">Crea Log</string>
    <string name="mostra_operazioni">Mostra Operazioni</string>
    <string name="pulisce_log">Pulisce log</string>
    <string name="usa_scaricati">Solo MP3 Scaricati</string>
    <string name="down_imm">Download Immagini</string>
    <string name="reload">Reload Automatico</string>
    <string name="car_ant">Caricamento anticipato</string>
    <string name="annuncio">Annuncio Brano</string>
    <string name="traffico">Mostra Traffico</string>
    <string name="risp_dati">Risparmio Dati</string>
    <string name="mostra_bellezza">Mostra Bellezza</string>
    <string name="mostra_titolo">Mostra Titolo</string>
    <string name="mostra_rete_assente">Mostra Rete Assente</string>
    <string name="suona_attesa">Musica di attesa</string>
    <string name="varie">Varie</string>
    <string name="sfuma_brano">Sfuma Brano</string>
    <string name="controllo_rete">Controllo Rete</string>
    <string name="ordsel">Ordinamento e Filtraggio</string>
    <string name="stelle">Filtro per Bellezza</string>
    <string name="bellezza">Bellezza</string>
    <string name="superiore">Anche Valori Superiori</string>
    <string name="filtro">Filtro Attuale</string>
    <string name="pulisce_filtro">Pulisce Filtro</string>
    <string name="tentativi">Tentativi</string>
    <string name="pronuncia">Pronuncia Operazioni</string>
    <string name="membri">Mostra Membri</string>
</resources>
